added images & style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Document</title>
 </head>
@@ -84,7 +85,7 @@
    <h3>Recent Memorials</h3>
           <div class="card-deck">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./images/checklist-pre-planning-funeral-main.jpg" class="img-thumbnail" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Bob Martines</h5>
                   <p class="card-text">1937-2019</p>
@@ -92,7 +93,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./images/Memorial-Service-Birds.jpg" class="img-thumbnail" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Bob Martines</h5>
                   <p class="card-text">1937-2019</p>
@@ -100,7 +101,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./images/grief_banner.jpg" class="img-thumbnail" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Bob Martines</h5>
                   <p class="card-text">1937-2019</p>
