--- a/forms/testimony.html
+++ b/forms/testimony.html
@@ -13,16 +13,16 @@
     <div class="container-fluid"> 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h3 class="display-4">Create a Memorial Account</h3>
+              <h3 class="display-6">Create a Testimonial Account</h3>
             </div> <br/> <br/> 
     <form>
         <div class="form-row">
           <div class="col-md-4 mb-3">
-            <label for="validationDefault01">First name</label>
+            <label for="validationDefault01">First Name</label>
             <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="Mark" required>
           </div>
           <div class="col-md-4 mb-3">
-            <label for="validationDefault02">Last name</label>
+            <label for="validationDefault02">Last Name</label>
             <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="Otto" required>
           </div>
           <div class="col-md-4 mb-3">
