--- a/forms/memory.html
+++ b/forms/memory.html
@@ -110,6 +110,7 @@
         <button onclick="redirect()" class="btn btn-primary" type="submit">Submit form </button>
       </form>
     </div>
-  
+
+<script src="../app.js"></script>  
 </body>
 </html>
