--- a/forms/memory.html
+++ b/forms/memory.html
@@ -91,12 +91,12 @@
 
          <div class="col-md-4 mb-3">
                 <label for="validationDefault02">Card Number</label>
-                <input type="text" class="form-control" id="validationDefault02" placeholder="phone number" value="phone number" required>
+                <input type="text" class="form-control" id="validationDefault02" placeholder="card number" value="phone number" required>
         </div>
 
          <div class="col-md-4 mb-3">
-                   <label for="validationDefault02">Card Number</label>
-                   <input type="text" class="form-control" id="validationDefault02" placeholder="phone number" value="phone number" required>
+                   <label for="validationDefault02">Security Number</label>
+                   <input type="text" class="form-control" id="validationDefault02" placeholder="security number" value="phone number" required>
         </div>
         
         <div class="form-group">
