--- a/forms/memory.html
+++ b/forms/memory.html
@@ -13,7 +13,7 @@
     <div class="container-fluid"> 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h3 class="display-6">Create a Memorial Account</h3>
+              <h3 class="display-6">Create an Account</h3>
             </div> <br/> <br/> 
     <form>
         <div class="form-row">
@@ -67,37 +67,7 @@
           </div>
         </div>
 
-    <div class="col-md-3 mb-3"></div>
-        <div class="form-check form-check-inline">
-                <label for="exampleInputEmail1">Card Type</label>
-                <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                <label class="form-check-label" for="exampleRadios1">   Visa </label>
-                
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                <label class="form-check-label" for="exampleRadios2">
-                  Master Card
-                </label>
-              </div>
-              <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                    <label class="form-check-label" for="exampleRadios2">
-                      Discover
-                    </label>
-            </div>
-        </div>
-
-         <div class="col-md-4 mb-3">
-                <label for="validationDefault02">Card Number</label>
-                <input type="text" class="form-control" id="validationDefault02" placeholder="card number" value="phone number" required>
-        </div>
-
-         <div class="col-md-4 mb-3">
-                   <label for="validationDefault02">Security Number</label>
-                   <input type="text" class="form-control" id="validationDefault02" placeholder="security number" value="phone number" required>
-        </div>
+  
         
         <div class="form-group">
           <div class="form-check">
