added contact link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="./forms/testimony.html">TESTIMONIALS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="https://www.nextrevtechnologies.com/">CONTACT</a>
               </li>
         </ul>
     <br/> <br/> <br/> 
